--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1> Welcome to Raúl Alonso's portfolio.</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Página principal</title>
+	<link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+	<header>
+		<h1>Bienvenidos a mi página web</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Acerca de</a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h2>Últimas noticias</h2>
+		<article>
+			<h3>Noticia 1</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus justo non libero pulvinar, eget convallis justo finibus. Duis feugiat eros ut massa fringilla, sit amet aliquam quam venenatis.</p>
+		</article>
+		<article>
+			<h3>Noticia 2</h3>
+			<p>Proin rutrum nisl sit amet turpis malesuada, at consequat felis dictum. Etiam eu mi eget magna tincidunt malesuada vel sed magna.</p>
+		</article>
+	</main>
+	<footer>
+		<p>Derechos reservados &copy; 2023</p>
+	</footer>
+</body>
+</html>
