--- a/index.html
+++ b/index.html
@@ -19,26 +19,25 @@
         align-items: center;
       }
 
-        .nav-links {
+      .nav-links {
         display: flex;
         justify-content: flex-end;
         width: 100%;
-        }
+      }
 
-        .nav-links a {
+      .nav-links a {
         color: #333;
         text-decoration: none;
         padding: 5px;
         border-radius: 5px;
         transition: all 0.3s ease;
         margin-right: 10px;
-        }
+      }
 
-        .nav-links a:last-child {
+      .nav-links a:last-child {
         margin-right: 0;
         margin-left: 80;
-        }
-
+      }
 
       .nav-links a:hover {
         background-color: #333;
@@ -67,6 +66,29 @@
         width: 1470px;
         height: 720px;
         margin-bottom: 20px;
+        position: relative;
+      }
+
+      .btn-explore {
+        display: inline-block;
+        position: absolute;
+        bottom: calc(20% / 4);
+        left: 45%;
+        width: 150px;
+        padding: 10px;
+        text-align: center;
+        font-size: 16px;
+        color: #fff;
+        background-color: transparent;
+        border: 1px solid #fff;
+        border-radius: 5px;
+        transition: all 0.3s ease;
+      }
+
+      .btn-explore:hover {
+        background-color: #fff;
+        color: #000;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -77,11 +99,14 @@
         <a href="contacto.html">Contact</a>
       </nav>
     </header>
-
+    
     <section>
-      <img src="img/prueba.jpg" alt="Foto 1">
-      <img src="img/color_pr.jpg" alt="Foto 2">
-      <img src="https://via.placeholder.com/800x600" alt="Foto 3">
+      <img src="img/b&b_pr.jpg" alt="Foto 1">
+      <button class="btn-explore">Explore</button>
+      <img src="img/IMG_2612.jpg" alt="Foto 2">
+      <button class="btn-explore">Explore</button>
+      <img src="" alt="Foto 3">
+      <button class="btn-explore">Explore</button>
     </section>
   </body>
 </html>
